--- a/index.html
+++ b/index.html
@@ -17,24 +17,26 @@
             <div class="digit" id ="7">7</div>
             <div class="digit" id ="8">8</div>
             <div class="digit" id ="9">9</div>
-            <div class="operator" id ="/">/</div>
+            <div class="delete" id ="del">DEL</div>
+            
 
             <div class="digit" id ="4">4</div>
             <div class="digit" id ="5">5</div>
             <div class="digit" id ="6">6</div>
-            <div class="operator" id ="*">*</div>
+            <div class="operator" id ="×">×</div>
 
             <div class="digit" id ="1">1</div>
             <div class="digit" id ="2">2</div>
             <div class="digit" id ="3">3</div>
             <div class="operator" id ="-">-</div>
 
-            <div class="reset" id ="AC">AC</div>
-            <div class="digit" id ="0">0</div>
             <div class="digit" id =".">.</div>
+            <div class="digit" id ="0">0</div>
+            <div class="operator" id ="÷">÷</div>
             <div class="operator" id ="+">+</div>
 
-            <div class="equal_to" id ="=">=</div>
+            <div class="reset" id ="AC">CE</div>
+            <div class="equal_to" id ="=">=</div> 
         </div>
     </div>
     
