--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
             <div class="second-operand"></div>
         </div>
         <div class="keys">
-            <div class="digit" id ="7">7</div>
-            <div class="digit" id ="8">8</div>
-            <div class="digit" id ="9">9</div>
-            <div class="delete" id ="del">DEL</div>
+            <button class="digit" id ="7">7</button>
+            <button class="digit" id ="8">8</button>
+            <button class="digit" id ="9">9</button>
+            <button class="delete" id ="del">DEL</button>
             
 
-            <div class="digit" id ="4">4</div>
-            <div class="digit" id ="5">5</div>
-            <div class="digit" id ="6">6</div>
-            <div class="operator" id ="×">×</div>
+            <button class="digit" id ="4">4</button>
+            <button class="digit" id ="5">5</button>
+            <button class="digit" id ="6">6</button>
+            <button class="operator" id ="×">×</button>
 
-            <div class="digit" id ="1">1</div>
-            <div class="digit" id ="2">2</div>
-            <div class="digit" id ="3">3</div>
-            <div class="operator" id ="-">-</div>
+            <button class="digit" id ="1">1</button>
+            <button class="digit" id ="2">2</button>
+            <button class="digit" id ="3">3</button>
+            <button class="operator" id ="-">-</button>
 
-            <div class="digit" id =".">.</div>
-            <div class="digit" id ="0">0</div>
-            <div class="operator" id ="÷">÷</div>
-            <div class="operator" id ="+">+</div>
+            <button class="digit" id =".">.</button>
+            <button class="digit" id ="0">0</button>
+            <button class="operator" id ="÷">÷</button>
+            <button class="operator" id ="+">+</button>
 
-            <div class="reset" id ="AC">CE</div>
-            <div class="equal_to" id ="=">=</div> 
+            <button class="reset" id ="AC">CE</button>
+            <button class="equal_to" id ="=">=</button> 
         </div>
     </div>
     
